--- a/client/src/styles/base/_settings.scss
+++ b/client/src/styles/base/_settings.scss
@@ -1,11 +1,18 @@
 /** Colors */
 
 $white: #ffffff;
-$white-less: #eeeeee;
+$white-2: #eeeeee;
+
+$red-orange: #F44336;
+
 $grey-default: #333333;
+$grey-light-2: #c9c9c9;
 $grey-light: #999592;
+$grey-m-dark: #686868;
+$grey-dark-2: #4d4d4d;
 $grey-dark: #272723;
 
+$brown-light: #e1ddc3;
 
 /** Font size */
 
