--- a/client/src/styles/components/_footer.scss
+++ b/client/src/styles/components/_footer.scss
@@ -8,7 +8,7 @@
   color: $white;
   font-size: 4rem;
   padding: 1.1rem 0rem;
-  border-bottom: 1px solid #4d4d4d;
+  border-bottom: 1px solid $grey-dark-2;
 }
 
 .footer__wrapper {
