--- a/client/src/styles/styles.scss
+++ b/client/src/styles/styles.scss
@@ -2,3 +2,6 @@
 @import './base/base';
 @import './components/header';
 @import './components/footer';
+@import './components/button';
+@import './components/registerLogin';
+@import './components/form';
