Client, finish Register component and its logic

--- a/client/src/styles/styles.scss
+++ b/client/src/styles/styles.scss
@@ -1,7 +1,9 @@
 @import './base/settings';
 @import './base/base';
+@import './base/util';
 @import './components/header';
 @import './components/footer';
 @import './components/button';
 @import './components/registerLogin';
 @import './components/form';
+@import './components/dialog';
