--- a/client/src/styles/base/_settings.scss
+++ b/client/src/styles/base/_settings.scss
@@ -18,6 +18,9 @@ $brown-light: #e1ddc3;
 
 // $font-size-large: 1.8rem;
 // $font-size-small: 1.4rem;
+$font-size-xl: 3rem;
+$font-size-m: 1.4rem;
+$font-size-l: 1.8rem;
 
 
 /** Spacing */
