--- a/client/src/styles/components/_form.scss
+++ b/client/src/styles/components/_form.scss
@@ -1,5 +1,21 @@
+.block {
+  flex-grow: 1
+}
+
 .form-block {
   margin-bottom: 1rem;
+}
+
+.form-block--two {
+  display:flex;
+
+  > div:nth-child(1) {
+    padding-right: 1rem;
+  }
+
+  > div:nth-child(2) {
+    padding-left: 1rem;
+  }
 }
 
 .error-label {
