Client, finish user dashboard component

--- a/client/src/styles/base/_settings.scss
+++ b/client/src/styles/base/_settings.scss
@@ -2,6 +2,8 @@
 
 $white: #ffffff;
 $white-2: #eeeeee;
+$white-3: #f8f8f8;
+$white-4: #dddddd;
 
 $red-orange: #F44336;
 
@@ -11,6 +13,7 @@ $grey-light: #999592;
 $grey-m-dark: #686868;
 $grey-dark-2: #4d4d4d;
 $grey-dark: #272723;
+
 
 $brown-light: #e1ddc3;
 
