--- a/client/src/styles/styles.scss
+++ b/client/src/styles/styles.scss
@@ -7,3 +7,4 @@
 @import './components/registerLogin';
 @import './components/form';
 @import './components/dialog';
+@import './components/userDashboard';
