--- a/client/src/styles/styles.scss
+++ b/client/src/styles/styles.scss
@@ -8,3 +8,4 @@
 @import './components/form';
 @import './components/dialog';
 @import './components/userDashboard';
+@import './components/loading';
