Client, update the Header components, add navigation links, and dispatch logout action..

--- a/client/src/styles/base/_settings.scss
+++ b/client/src/styles/base/_settings.scss
@@ -7,6 +7,8 @@ $white-4: #dddddd;
 
 $red-orange: #F44336;
 
+$yellow: #ffff8b;
+
 $grey-default: #333333;
 $grey-light-2: #c9c9c9;
 $grey-light: #999592;
