--- a/client/src/styles/styles.scss
+++ b/client/src/styles/styles.scss
@@ -9,3 +9,5 @@
 @import './components/dialog';
 @import './components/userDashboard';
 @import './components/loading';
+@import './components/featured';
+@import './components/promotion';
