--- a/client/src/styles/styles.scss
+++ b/client/src/styles/styles.scss
@@ -11,3 +11,4 @@
 @import './components/loading';
 @import './components/featured';
 @import './components/promotion';
+@import './components/card';
