--- a/client/src/styles/styles.scss
+++ b/client/src/styles/styles.scss
@@ -15,3 +15,5 @@
 @import './components/card';
 @import './components/shop';
 @import './components/collapseFilters';
+@import './components/misc';
+@import './components/cardItem';
