Client, finish the add product form, update the admin layout (hoc), and install react-text-truncate to trim out the description text in card component

--- a/client/src/styles/components/_cardItem.scss
+++ b/client/src/styles/components/_cardItem.scss
@@ -69,13 +69,15 @@
   display: flex;
 
   .card-item__image {
-    width: 23rem;
+    width: 26rem;
     height: 211px;
     border: none;
+    // flex-grow: 1
   }
 
   .card-item__container {
-    flex-grow: 1;
+    // flex-grow: 3;
+    width: 50rem;
     border: 1px solid $white-3;
   }
 
