--- a/client/src/styles/components/_misc.scss
+++ b/client/src/styles/components/_misc.scss
@@ -27,3 +27,12 @@
   display: block;
   clear: both;
 }
+
+.read-more {
+  color: $grey-light;
+  font-size: 1.4rem;
+  
+  &:hover {
+    color: $grey-m-dark;
+  }
+}
