--- a/client/src/styles/base/_base.scss
+++ b/client/src/styles/base/_base.scss
@@ -33,7 +33,6 @@ a {
   background: $grey-dark;
 }
 
-
 // Form
 input {
   font-size: 1.5rem;
@@ -44,6 +43,25 @@ input {
   margin: 1rem 0 0 0;
 }
 
+textarea {
+  width: 100%;
+  height: 100px;
+  font-size: 15px;
+  padding: 10px;
+  box-sizing: border-box;
+  margin-top: 5px;
+  border: 1px solid #d1d1d1;
+  
+}
+
+select {
+  font-size: 1.6rem;
+  height: 3.8rem;
+  border: 1px solid $white-2;
+  border-radius: 3px;
+  width: 100%;
+  margin: 1rem 0 0 0;
+}
 
 // button {
 //   cursor: pointer;
