Client, finish image upload function in AddProduct component, and, API part, to handle upload images and remove image on Cloudinary server

--- a/client/src/styles/styles.scss
+++ b/client/src/styles/styles.scss
@@ -17,3 +17,4 @@
 @import './components/collapseFilters';
 @import './components/misc';
 @import './components/cardItem';
+@import './components/uploadFiles';
