--- a/client/src/styles/base/_base.scss
+++ b/client/src/styles/base/_base.scss
@@ -41,6 +41,7 @@ input {
   padding: 1rem 1rem;
   width: 100%;
   margin: 1rem 0 0 0;
+  border: 1px solid $white-4;
 }
 
 textarea {
@@ -50,7 +51,8 @@ textarea {
   padding: 10px;
   box-sizing: border-box;
   margin-top: 5px;
-  border: 1px solid #d1d1d1;
+  border: 1px solid $white-4;
+  resize: vertical;
   
 }
 
