--- a/client/src/styles/styles.scss
+++ b/client/src/styles/styles.scss
@@ -18,3 +18,4 @@
 @import './components/misc';
 @import './components/cardItem';
 @import './components/uploadFiles';
+@import './components/admin';
