--- a/client/src/styles/components/_button.scss
+++ b/client/src/styles/components/_button.scss
@@ -21,7 +21,8 @@ button {
 }
 
 .button--link-card,
-.button--link-bag {
+.button--link-bag,
+.button--link--addtocart {
   width: 100%;
   border: 1px solid #dcdcdc;
   padding: 0.5rem 1rem;
@@ -38,5 +39,13 @@ button {
   &:hover {
     background: $grey-light;
     color: $white;
+  }
+}
+
+.button--link--addtocart {
+  color: #6b6b6b;
+  background: #d9d9d9;
+  svg {
+    margin-right: 1rem;
   }
 }
