--- a/client/src/styles/styles.scss
+++ b/client/src/styles/styles.scss
@@ -19,3 +19,4 @@
 @import './components/cardItem';
 @import './components/uploadFiles';
 @import './components/admin';
+@import './components/productDetail';
