Client, changer the header nav style

--- a/client/src/styles/base/_settings.scss
+++ b/client/src/styles/base/_settings.scss
@@ -9,6 +9,11 @@ $white-5: #f0f0f0;
 $red-orange: #F44336;
 
 $yellow: #ffff8b;
+$sourLemon: #ffeaa7;
+$brightYarrow: #fdcb6e;
+
+$greenish-blue: #55efc4;
+$mint-leaf: #00b894;
 
 $grey-default: #333333;
 $grey-light-2: #c9c9c9;
