--- a/client/src/styles/components/_button.scss
+++ b/client/src/styles/components/_button.scss
@@ -2,10 +2,17 @@ button {
   cursor: pointer;
   text-transform: uppercase;
   padding: 1rem;
-  background: #e1ddc3;
+  background: $sourLemon;
   margin-top: 1rem;
   font-family: 'Oswald', sans-serif;
   font-size: 1.6rem;
+  border: none;
+  transition: 200ms cubic-bezier(0.2, 0.80, 0.2, 1);
+
+  &:hover {
+    background: $brightYarrow;
+    color: $white
+  }
 }
 
 .button--link {
@@ -16,8 +23,14 @@ button {
   text-transform: uppercase;
   padding: 1rem;
   display: table;
-  background: $brown-light;
+  background: $sourLemon;
   margin-top: 1rem;
+  transition: 200ms cubic-bezier(0.2, 0.80, 0.2, 1);
+
+  &:hover {
+    background: $brightYarrow;
+    color: $white
+  }
 }
 
 .button--link-card,
@@ -27,7 +40,7 @@ button {
   border: 1px solid #dcdcdc;
   padding: 0.5rem 1rem;
   display: block;
-  box-sizing: border-box;
+  // box-sizing: border-box;
   text-align: center;
   font-size: 1.4rem;
   text-transform: uppercase;
