--- a/client/src/styles/components/_header.scss
+++ b/client/src/styles/components/_header.scss
@@ -2,12 +2,6 @@ header {
   position: fixed;
   z-index: 999;
   width: 100%;
-  border-bottom: 1px solid $white;
-
-  a {
-    margin-left: 2rem;
-  }
-
 }
 
 .header__container {
@@ -27,40 +21,59 @@ header {
 
 .header__right {
   flex-grow: 1;
-  border-left: 1px solid $white-2;
-  border-right: 1px solid $white-2;
-}
 
-.header__top {
-  color: $grey-light-2;
-  border-bottom: 1px solid $white;
-}
-
-.header__bottom {
-  color: $white;
-}
-
-.header__top,
-.header__bottom {
+  font-size: 2rem;
   text-transform: uppercase;
-  font-weight: 400;
-  text-align: right;
-  font-size: 15px;
-  padding: 10px 20px;
+  font-weight: 300;
+  letter-spacing: 1px;
+  color: $white;
+
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+
+  a:hover {
+    color: $sourLemon;
+  }
+
+  .account {
+    display: grid;
+    width: 40rem;
+    grid-template-columns: repeat(3, auto);
+    justify-items: end;
+    align-items: center;
+  }
+
+  .nav {
+    display: grid;
+    width: 20rem;
+    grid-template-columns: repeat(2, auto);
+    align-content: center;
+    align-items: center;
+
+    
+  }
 }
 
 .header__cartLink {
-  display: inline-block;
-  position: relative;
+  display: flex;
+  align-items: center;
+
+  a {
+    margin-left: 20px;
+  }
 
   span {
-    position: absolute;
-    background: red;
-    top: 0.2rem;
-    color: #ffff;
-    left: -0.8rem;
+    // position: absolute;
+    background: $red-orange;
+    height: 2.4rem;
+    width: 2.4rem;
+    line-height: 2;
+    text-align: center;
+    padding-top: 10px;
+    color: $white;
     border-radius: 50%;
-    padding: 0 0.7rem 0.2rem 0.7rem;
+    padding: 0.1rem 0.7rem 0.2rem 0.7rem;
     font-size: 1.2rem;
   }
 }
@@ -68,9 +81,8 @@ header {
 .header__logout-link {
   cursor: pointer;
   display: inline-block;
-  margin-left: 20px;
 
   &:hover {
-    color: $yellow;
+    color: $sourLemon;
   }
 }
