--- a/client/src/styles/components/_page.scss
+++ b/client/src/styles/components/_page.scss
@@ -9,7 +9,7 @@
 }
 
 .page-top {
-  border-bottom: 1px solid #999592;   
+  box-shadow: 1px 2px 4px rgba(0, 0, 0, .1);
   padding: 20px 0px;
   text-transform: uppercase;
 }
