--- a/client/src/styles/components/_uploadFiles.scss
+++ b/client/src/styles/components/_uploadFiles.scss
@@ -24,6 +24,7 @@
   background-size: contain !important;
   background-position: center center !important;
   border: 1px solid $white-2;
+  cursor: pointer;
 
   > svg {
     position: relative;
