--- a/client/src/styles/components/_header.scss
+++ b/client/src/styles/components/_header.scss
@@ -37,11 +37,13 @@ header {
   }
 
   .account {
-    display: grid;
-    width: 40rem;
-    grid-template-columns: repeat(3, auto);
-    justify-items: end;
-    align-items: center;
+    display: flex;
+    justify-content: space-between;
+
+    >div, >a {
+      padding: 0 2rem;
+    }
+
   }
 
   .nav {
@@ -68,13 +70,13 @@ header {
     background: $red-orange;
     height: 2.4rem;
     width: 2.4rem;
-    line-height: 2;
+    line-height: 1.5;
     text-align: center;
     padding-top: 10px;
     color: $white;
     border-radius: 50%;
     padding: 0.1rem 0.7rem 0.2rem 0.7rem;
-    font-size: 1.2rem;
+    font-size: 1.5rem;
   }
 }
 
