Client, finish user's cart component, can incearse and decrease quantity, and update the header's total items indicator

--- a/client/src/styles/base/_settings.scss
+++ b/client/src/styles/base/_settings.scss
@@ -5,8 +5,10 @@ $white-2: #eeeeee;
 $white-3: #f8f8f8;
 $white-4: #dddddd;
 $white-5: #f0f0f0;
+$white-6: #e7e7e7;
 
 $red-orange: #F44336;
+$chi-gong: #d63031;
 
 $yellow: #ffff8b;
 $sourLemon: #ffeaa7;
