--- a/client/src/styles/styles.scss
+++ b/client/src/styles/styles.scss
@@ -20,3 +20,4 @@
 @import './components/uploadFiles';
 @import './components/admin';
 @import './components/productDetail';
+@import './components/userCartProduct';
