--- a/client/src/styles/components/_shop.scss
+++ b/client/src/styles/components/_shop.scss
@@ -19,6 +19,12 @@
     padding: 1rem 1rem;
     font-size: 2rem;
     color: $grey-light-2;
+    transition: 200ms cubic-bezier(0.2, 0.8, 0.2, 1);
+    cursor: pointer;
+
+    &:hover {
+      color: $grey-m-dark;
+    }
   }
 
   .active {
