--- a/client/src/styles/base/_settings.scss
+++ b/client/src/styles/base/_settings.scss
@@ -29,8 +29,6 @@ $brown-light: #e1ddc3;
 
 /** Font size */
 
-// $font-size-large: 1.8rem;
-// $font-size-small: 1.4rem;
 $font-size-xl: 3rem;
 $font-size-m: 1.4rem;
 $font-size-l: 1.8rem;
@@ -41,5 +39,7 @@ $s-size: 1.2rem;
 $m-size: 1.6rem;
 $l-size: 3.2rem;
 $xl-size: 4.8rem;
-$desktop-breakpoint: 45rem; //450px
+$desktop-breakpoint: 1224px;
+$phone-breakpoint: 320px;
+$tablet-breakpoint: 768px;
 
