--- a/client/src/styles/components/_admin.scss
+++ b/client/src/styles/components/_admin.scss
@@ -1,13 +1,10 @@
 .admin-category__wrapper {
-  padding-bottom: 50px;
+  padding-bottom: 5rem;
   border-bottom: 4px solid #e9e9e9;
 }
 
 .admin-two-column {
   display: flex;
-
-  &__left {
-  }
 
   &__right {
     flex-grow: 1;
@@ -21,11 +18,11 @@
 }
 
 .category__item {
-  width: 200px;
-  font-size: 20px;
+  width: 20rem;
+  font-size: 2rem;
   font-weight: 300;
   border: 1px solid #f1f1f1;
-  padding: 10px;
+  padding: 1rem;
   position: relative;
   background: #999592;
   color: #fff;
