--- a/client/src/styles/components/_page.scss
+++ b/client/src/styles/components/_page.scss
@@ -1,6 +1,7 @@
 .page-container {
-  min-height: 75vh;
   padding-top: 8.5rem;
+  width: 100%;
+  
 }
 
 // wrapper
@@ -10,6 +11,6 @@
 
 .page-top {
   box-shadow: 1px 2px 4px rgba(0, 0, 0, .1);
-  padding: 20px 0px;
+  padding: 2rem 1rem;
   text-transform: uppercase;
 }
