--- a/client/src/styles/components/_registerLogin.scss
+++ b/client/src/styles/components/_registerLogin.scss
@@ -1,5 +1,4 @@
 .register-login-container {
-  display: flex;
   border: 1px solid $grey-light;
   border-top: 5px solid $grey-light;
   -webkit-box-sizing: border-box;
@@ -7,6 +6,13 @@
   margin: 8rem 0rem 11rem 0rem;
   padding: 3rem;
   min-height: 43rem;
+  display: grid;
+  grid-template-columns: repeat(2, 1fr);
+  
+  @media (max-width: $tablet-breakpoint) {
+    grid-template-columns: repeat(1, 1fr);
+    grid-gap: 2rem;
+  }
 
   h2 {
     margin: 2rem 0rem;
@@ -20,11 +26,6 @@
     width: 90%;
   }
 
-}
-
-.register-login-container__left,
-.register-login-container__right {
-  flex: 1;
 }
 
 .login__wrapper {
