--- a/client/src/styles/components/_userCartProduct.scss
+++ b/client/src/styles/components/_userCartProduct.scss
@@ -12,7 +12,7 @@
   flex-grow: 1;
   display: flex;
   flex-direction: column;
-  justify-content: start;
+  justify-content: flex-start;
 
   h4 {
     color: $grey-m-dark;
